@@ -228,7 +228,12 @@ if (TYPO3_MODE=='BE')   {
 	
 	//t3lib_extMgm::addModule('web','txdirectmailM2','',t3lib_extMgm::extPath($_EXTKEY).'mod1/');
 	
-	$ICON_TYPES['dmail'] = array('icon' => t3lib_extMgm::extRelPath($_EXTKEY).'res/gfx/ext_icon_dmail_folder.gif');
+	//use SpriteManager if TYPO3 4.4.0
+	if (t3lib_div::compat_version("4.4.0")) {
+		t3lib_SpriteManager::addTcaTypeIcon('pages', 'contains-dmail', '../typo3conf/ext/direct_mail/res/gfx/ext_icon_dmail_folder.gif');
+	} else {
+		$ICON_TYPES['dmail'] = array('icon' => t3lib_extMgm::extRelPath($_EXTKEY).'res/gfx/ext_icon_dmail_folder.gif');
+	}
 }
 
 ?>
