@@ -1,3 +1,6 @@
+2010-10-31 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #10166: TCA Icon using SpriteManager if 4.4.x is installed
+
 2010-09-01 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* release 2.6.8
 
